@@ -34,23 +34,23 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.stream.Collectors;
 
-import javax.ws.rs.Consumes;
-import javax.ws.rs.FormParam;
-import javax.ws.rs.GET;
-import javax.ws.rs.POST;
-import javax.ws.rs.PUT;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.WebApplicationException;
-import javax.ws.rs.container.AsyncResponse;
-import javax.ws.rs.container.Suspended;
-import javax.ws.rs.core.Application;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.Response.Status;
-import javax.ws.rs.core.StreamingOutput;
+import jakarta.ws.rs.Consumes;
+import jakarta.ws.rs.FormParam;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.POST;
+import jakarta.ws.rs.PUT;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.PathParam;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.QueryParam;
+import jakarta.ws.rs.WebApplicationException;
+import jakarta.ws.rs.container.AsyncResponse;
+import jakarta.ws.rs.container.Suspended;
+import jakarta.ws.rs.core.Application;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.Response.Status;
+import jakarta.ws.rs.core.StreamingOutput;
 
 import org.glassfish.jersey.client.ClientConfig;
 import org.glassfish.jersey.logging.LoggingFeature;
@@ -313,7 +313,7 @@ public class TestAsyncJaxrsClient extends JerseyTest5 {
 						.propertySet(PROPERTIES).getForEntity(PropertyBox.class))
 				.thenApply(r -> r.orElse(null)).thenAccept(box -> {
 					assertNotNull(box);
-					assertEquals(new Integer(1), box.getValue(CODE));
+					assertEquals(Integer.valueOf(1), box.getValue(CODE));
 					assertEquals("value1", box.getValue(VALUE));
 				}).thenCompose(x -> client.request().path("test").path("box/{id}").resolve("id", 1)
 						.propertySet(PROPERTIES).get(PropertyBox.class))
@@ -321,7 +321,7 @@ public class TestAsyncJaxrsClient extends JerseyTest5 {
 					assertEquals(HttpStatus.OK, rsp2.getStatus());
 					PropertyBox box = rsp2.getPayload().orElse(null);
 					assertNotNull(box);
-					assertEquals(new Integer(1), box.getValue(CODE));
+					assertEquals(Integer.valueOf(1), box.getValue(CODE));
 					assertEquals("value1", box.getValue(VALUE));
 				}).thenCompose(x -> client.request().path("test").path("boxes").propertySet(PROPERTIES)
 						.getAsList(PropertyBox.class))
@@ -331,12 +331,12 @@ public class TestAsyncJaxrsClient extends JerseyTest5 {
 
 					PropertyBox box = boxes.get(0);
 					assertNotNull(box);
-					assertEquals(new Integer(1), box.getValue(CODE));
+					assertEquals(Integer.valueOf(1), box.getValue(CODE));
 					assertEquals("value1", box.getValue(VALUE));
 
 					box = boxes.get(1);
 					assertNotNull(box);
-					assertEquals(new Integer(2), box.getValue(CODE));
+					assertEquals(Integer.valueOf(2), box.getValue(CODE));
 					assertEquals("value2", box.getValue(VALUE));
 				})
 				.thenCompose(x -> client.request().path("test").path("boxes").propertySet(PROPERTIES)
